tests/typechecker/fail/010-let.hyg
let x: foo = 3;
let x: baz = {
    let y: bar = 4;
    x + w
};
println("Hello")
